# all

./: 05-ml-02-ML-preparation.ipynb  3 modul, 3-qism.ipynb  3-modul 3-qism 2-amalyot.ipynb  Copy of 04-VISUAL-AMALIYOT-01-matplotlib.ipynb  Copy of 04-VISUAL-AMALIYOT-03-scatterplot-JAVOBLAR.ipynb  Copy of 04-VISUAL-AMALIYOT-04-distribution-JAVOBLAR (1).ipynb  Copy of 04-VISUAL-AMALIYOT-04-distribution-JAVOBLAR.ipynb  README.md  bot.py  config.py  db.py  keyboards.py  pandas_1_amaliyot_df.ipynb  requirements.txt  wordbank.py
anon-telegram-random-chat-bot/: .env.example  .gitignore  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
anon-telegram-random-chat-bot/app/: __init__.py  config.py  keyboards.py  main.py  matching.py  relay.py  storage.py
anon-telegram-random-chat-bot/app/handlers/: commands.py  fallback.py  start.py
anon-telegram-random-chat-bot/app/i18n/: __init__.py  en.json
anon-telegram-random-chat-bot/app/utils/: compat.py  ids.py  logging.py  ratelimit.py
anon-telegram-random-chat-bot/deploy/: Dockerfile  docker-compose.yml  systemd.service
anon-telegram-random-chat-bot/docs/: architecture.md  privacy.md
anon-telegram-random-chat-bot/tests/: conftest.py  test_commands.py  test_matching.py  test_relay.py
handlers/: __init__.py  admin_handler.py  quiz_handler.py  start_handler.py  stats_handler.py  today_handler.py  upgrade_handler.py
services/: __init__.py  quiz_service.py  word_service.py
utils/: __init__.py  time.py
