[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "ASYNC",
    "B",
    "S",
    "BLE",
    "C4",
    "ICN",
    "RUF",
]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
